[gd_scene load_steps=5 format=3 uid="uid://c8tc5dy0jmf0y"]

[ext_resource type="Script" path="res://graph/scripts/vertex.gd" id="1_ey4sf"]
[ext_resource type="Texture2D" uid="uid://cvstya0mkgsf5" path="res://graph/sprites/vertex_uni_gelb.png" id="2_jj0ph"]
[ext_resource type="Texture2D" uid="uid://e4y0fyio8suv" path="res://graph/sprites/vertex_uni_blau.png" id="5_btwxg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lky5f"]
radius = 50.0

[node name="vertex" type="Area2D"]
z_index = 3
script = ExtResource("1_ey4sf")
sprite_unselected = ExtResource("2_jj0ph")
sprite_selected = ExtResource("5_btwxg")
sprite_current = ExtResource("5_btwxg")
sprite_visited = ExtResource("5_btwxg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lky5f")

[node name="Label_id" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_info" type="Label" parent="."]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.0
offset_top = 12.0
offset_right = 23.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.875, 0.875)
size_flags_horizontal = 4
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_meta" type="Label" parent="."]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -34.0
offset_right = 20.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.32, 0.32)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
